standardized_project_pages

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -61,7 +61,7 @@
             </p>
             <div class="project-overview-container">
                 <div class="row">
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top: 20px;">
                         duration
                     </p>
@@ -69,7 +69,7 @@
                         Spring '20 Semester
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top: 20px">
                         focus
                     </p>
@@ -77,7 +77,7 @@
                         Health, Society, Poverty
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top: 20px">
                         partner
                     </p>
@@ -85,7 +85,7 @@
                         Alemany Farm
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top: 20px">
                         tools
                     </p>
@@ -100,50 +100,71 @@
       <div class="overview-container">
           <div class="project-content-container">
               <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                   </div>
-                  <div class="col-9" style="font-style: normal;">
+                  <div class="col-lg-9" style="font-style: normal;">
                       <div class="team-container">
+                        <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                           <div class="row">
                               <div class="col">
+                                <a href="https://www.linkedin.com/in/kaylanh/">
                                 <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
+                                </a>
                               </div>
                               <div class="col">
+                                <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
                                 <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyed" />
+                                </a>
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
+                                <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
+                                <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
+                                </a>
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
+                                <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
+                                <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
+                                </a>
                               </div>
                               <div class="col">
+                                <a href="https://www.linkedin.com/in/shaantam/">
                                 <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
+                                </a>
                             </div>
                           </div>
                           <div class="row">
                             <div class="col text-center">
+                                <a href="https://www.linkedin.com/in/kaylanh/">
                                 <p>Kaylan Huang</p>
+                                </a>
                                 <p>Project Lead</p>
                                 <p>Senior | Economics</p>
                             </div>
                               <div class="col text-center">
-                                  <p>Zeyed El-Arabaty</p>
+                                  <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
+                                  <p>Zeyad El-Arabaty</p>
+                                  </a>
                                   <p>Project Lead</p>
                                   <p>Senior | CompSci</p>
                               </div>
                               <div class="col text-center">
+                                  <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
                                   <p>Qianning Tang</p>
+                                  </a>
                                   <p>Freshman | Sustanable Environmental Design</p>
                               </div>
                               <div class="col text-center">
+                                  <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
                                   <p>Ryan Yu</p>
+                                  </a>
                                   <p>Junior | Molecular and Cell Biology</p>
                               </div>
                               <div class="col text-center">
+                                <a href="https://www.linkedin.com/in/shaantam/">
                                 <p>Shaantam Chawla</p>
+                                </a>
                                 <p>Junior | EECS + Public Policy Minor</p>
                             </div>
                           </div>
@@ -151,39 +172,41 @@
                   </div>
               </div>
           </div>
+        </div>
+      </div>
+      <div class="overview-container">
+        <div class="project-content-container">
+          <div class="row">
+            <div class="col-lg-3">
+              <h3 style="text-align: center;"
+              id="background-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
+            </div>
+            <div class="col-lg-9" style="font-style: normal;">
+              <p> Alemany Farm is a nonprofit urban farm that focused on helping alleviate food deserts and lack of access to nutritious produce. One of the issues that they faced was tracking and documenting the various tasks completed by their volunteers within the orchards around the farm. Invention Corps members were tasked with finding and designing a solution on how track these activities. </p>
+              <p> How might we create a system for multiple volunteers to find, track, and document trees on the farm?</p>
+              <div class="col-lg-8">
+              <img src="../assets/img/alemany/farmsarecool.png" class="center-img">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
-                      <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
-                  </div>
-                    <div class="col-9" style="font-style: normal;">
-                      <p> Alemany Farm is a nonprofit urban farm that focused on helping alleviate food deserts and lack of access to nutritious produce. One of the issues that they faced was tracking and documenting the various tasks completed by their volunteers within the orchards around the farm. Invention Corps members were tasked with finding and designing a solution on how track these activities. </p>
-                      <p> How might we create a system for multiple volunteers to find, track, and document trees on the farm?</p>
-                      <div class="col-8">
-                          <img src="../assets/img/alemany/farmsarecool.png">
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="overview-container">
-            <div class="project-content-container">
-                <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #FFFF99;">empathize</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                       <p> Our team first began our design process by traveling to the farm to interview the users in order to gain a better perspective on their pain points. We learned that Alemany Farm were using a simple map and numbering system to locate trees, with no universal method for documenting what they had done for the day. This meant that other volunteers would often repeat treatments, miss certain trees, and couldn’t communicate with volunteers from other shifts. </p>
                     <p> After the tour, we headed back to campus to brainstorm ideas and prototype possible solutions.</p>
 
                   <div class="row">
-
-                        <img src="../assets/img/alemany/notetakingkids.png">
+                      <div class="col-lg-8">
+                        <img src="../assets/img/alemany/notetakingkids.png" class="center-img">
                         <figcaption style="font-size: x-small;">Intense note-taking in process!</figcaption>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -192,11 +215,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #99CC99;">ideate</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                       <p> After some discussion, we determined that an app was the best way to solve their issue. The majority, if not all, of the volunteers at Alemany Farm had an iPhone, so we decided to wireframe a design for an iOS app. We wanted to keep in mind the setting that they would be utilizing the app in and opted for faster inputs using an interface composed of buttons. </p>
 
                       <p> Features we wanted to add:
@@ -208,8 +231,8 @@
                         </ul>
                       </p>
                       <div class="row">
-                        <div class="col-8">
-                            <img src="../assets/img/alemany/sketch.png">
+                        <div class="col-lg-8">
+                            <img src="../assets/img/alemany/sketch.png" class="center-img">
                             <figcaption style="font-size: x-small;">An example of one of the many wireframes! Creds to Qianning </figcaption>
                         </div>
                       </div>
@@ -226,14 +249,14 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #99CCFF;">prototype</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                       <p> We worked collaboratively on a single wireframe, with each one of us adding pages that we were assigned and then tying them together into one cohesive project. Thanks to the consistent communication of our mentors, we were able to generate feedback and reiterate multiple times to continue to optimize our designs.</p>
                       <div class="row">
-                        <div class="col-8">
+                        <div class="col-lg-8">
                             <img src="../assets/img/alemany/fruits.png">
                             <figcaption style="font-size: x-small;">Custom fruit icons for each type of tree </figcaption>
                         </div>
@@ -273,11 +296,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #E06B65;">solution</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                       <p> We decided to create an iOS app that had the functionality the Alemany Farm team would need while working to take care of the orchards. When determining the features of the app, we wanted to keep in mind the environment that the app would be utilized within. This means the app should quickly accessible as well as easily navigated after the care for each tree was completed. Efficiency and ease of use was key. </p>
                       <p> Additionally, the team at Alemany Farm requested a way to navigate the farm in a more efficient way. We decided to implement a live map that would allow for both easy addition and removal of tree locations, as the farm was constantly growing to add new trees while digging up low fruit yield ones.</p>
                       <p> Data was another concern, specifically visualization and record keeping. We implemented designs that would allow for certain metrics to be kept to each unique tree ID, while also for them to be generated into graphs for analytical purposes</p>
@@ -299,11 +322,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #FFFF99;">next steps</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                       <p> From our dear project lead Kaylan:</p>
                       <p> “In a rewarding semester full of growth and team building, our group communicated incredibly well within itself despite the circumstances of the pandemic changing the work flow of our project. With all of our meetings moved online, every member put extra effort into learning new skills through online meetings and tutorials, as many of us tried to tackle iOS development or wire-framing for the first time. With much of the project based in new experiences for our members and with an equal excitement for our work reflected in our mentors, our team gained a lot in terms of growth and partnership. Though we would have liked to accomplish more of the end phases of iOS development, our project team has accomplished a feat we’re proud of in the span of a semester despite the unique circumstances. Especially for the two graduating seniors leading the team, it was an incredible and memorable way to leave Berkeley and this chapter of our lives.”</p>
 
@@ -315,15 +338,15 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                  <div class="col-3">
+                  <div class="col-lg-3">
                       <h3 style="text-align: center;"
                       id="team-header"><u style="border-bottom: 10px solid #99CC99;">thank you</u></h3>
                   </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             A big thank you to our mentors Jack and Abby for their time and providing us well thought out feedback!
                         </p>
-                        <div class="col-8">
+                        <div class="col-lg-8">
                             <img src="../assets/img/alemany/happykids.png">
                             <figcaption style="font-size: x-small;">the best arbor specialists :') </figcaption>
                         </div>
