--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -126,7 +126,9 @@
                     <div class="team-container">
                         <div class="row">
                             <div class="col-3">
+                                <a href="https://www.linkedin.com/in/brendanshih/">
                                 <img src="../assets/img/bsfc/brendan.svg" alt="Brendan" />
+                                </a>
                             </div>
                             <div class="col-3">
                                 <img src="../assets/img/bsfc/katrina.svg" alt="Katrina" />
@@ -135,12 +137,16 @@
                                 <img src="../assets/img/bsfc/malena.svg" alt="Malena" />
                             </div>
                             <div class="col-3">
+                                <a href="https://www.linkedin.com/in/manooshree-patel-894b82132/">
                                 <img src="../assets/img/bsfc/manu.svg" alt="Manooshree" />
+                                </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-3 text-center">
+                                <a href="https://www.linkedin.com/in/brendanshih/">
                                 <p>Brendan Shih</p>
+                                </a>
                                 <p>Project Lead</p>  
                             </div>
                             <div class="col-3 text-center">
@@ -152,7 +158,9 @@
                                 <p>Design Consultant</p> 
                             </div>
                             <div class="col-3 text-center">
+                                <a href="https://www.linkedin.com/in/manooshree-patel-894b82132/">
                                 <p>Manooshree Patel</p>
+                                </a>
                                 <p>Design Consultant</p> 
                             </div>
                         </div>
