--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -78,8 +78,7 @@
             <div class="project-overview-container">
                 <div class="row">
                   <div class="col">
-                    <p class="project" style="text-align: center; padding-top:
-                    20px;">
+                    <p class="project" style="text-align: center; padding-top: 20px;">
                         duration
                     </p>
                     <p style="text-align: center; font-style: normal;">
@@ -96,8 +95,7 @@
                     </p>
                   </div>
                   <div class="col">
-                    <p class="project" style="text-align: center; padding-top:
-                    20px">
+                    <p class="project" style="text-align: center; padding-top: 20px">
                         partner
                     </p>
                     <p style="text-align: center; font-style: normal;">
@@ -105,8 +103,7 @@
                     </p>
                   </div>
                   <div class="col">
-                    <p class="project" style="text-align: center; padding-top:
-                    20px">
+                    <p class="project" style="text-align: center; padding-top: 20px">
                         tools
                     </p>
                     <p style="text-align: center; font-style: normal;">
