--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -77,7 +77,7 @@
             </p>
             <div class="project-overview-container">
                 <div class="row">
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top:
                     20px;">
                         duration
@@ -86,7 +86,7 @@
                         Spring '20 Semester
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top:
                     20px">
                         focus
@@ -95,16 +95,16 @@
                         Society
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top:
                     20px">
                         partner
                     </p>
                     <p style="text-align: center; font-style: normal;">
-                        The Moffitt Library
+                        Moffitt Library
                     </p>
                   </div>
-                  <div class="col-sm">
+                  <div class="col">
                     <p class="project" style="text-align: center; padding-top:
                     20px">
                         tools
@@ -119,21 +119,28 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <div class="team-container">
+                            <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                             <div class="row">
                                 <div class="col">
+                                    <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
                                     <img src="../assets/img/makerspace/icons/zulaika.svg" alt="zulaika" />
+                                    </a>
                                 </div>
                                 <div class="col">
+                                    <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
                                     <img src="../assets/img/makerspace/icons/batu.svg" alt="batu" />
+                                    </a>
                                 </div>
                                 <div class="col">
+                                    <a href="https://www.linkedin.com/in/djasonchen/">
                                     <img src="../assets/img/makerspace/icons/dan.svg" alt="dan" />
+                                    </a>
                                 </div>
                                 <div class="col">
                                     <img src="../assets/img/makerspace/icons/jeffrey.svg" alt="jeffrey" />
@@ -147,16 +154,22 @@
                             </div>
                             <div class="row">
                                 <div class="col text-center">
+                                    <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
                                     <p>Zulaika Zulkephli</p>
+                                    </a>
                                     <p>Project Lead</p>  
                                     <p>Senior | Psychology</p>
                                 </div>
                                 <div class="col text-center">
+                                    <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
                                     <p>Batu Akkas</p>
+                                    </a>
                                     <p>Freshman | BioE</p>
                                 </div>
                                 <div class="col text-center">
+                                    <a href="https://www.linkedin.com/in/djasonchen/">
                                     <p>Dan Chen</p>
+                                    </a>
                                     <p>Sophomore | Statistics</p>
                                 </div>
                                 <div class="col text-center">
@@ -172,6 +185,7 @@
                                     <p>Freshman | CivE</p>
                                 </div>
                             </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -180,11 +194,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="background-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             Hello and welcome to our Moffitt Library Makerspace Project! We are Batu, Dan, Natalie, Sunny,  Jeffrey, and Zulaika— a team of multi-disciplinary students across various majors, design experiences, and backgrounds from a club called Invention Corps Berkeley. We were offered the opportunity to reimagine the Moffitt Makerspace thanks to our mentors Nicole Brown and Annalise Philips. The Moffitt Makerspace (MM) is centered around collaborative and open workspaces for the entire UC Berkeley community to make and create regardless of design experience. After initial observations, we felt that the Moffitt Makerspace, as a resourceful space on campus, lacked a clear identity and prescence at Cal. Futhermore, the Moffitt Makerspace is positioned for renovation as the Connected Center for Learning among Moffitt Library’s 1st to 3rd floors so this was the perfect time to begin considering changes for the future. Thus, we have shaped our work and research for the long-term structural and systematic redesign of the MM.
                         </p>
@@ -221,11 +235,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">timeline</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                             <img src="../assets/img/makerspace/background/timeline.svg">
                     </div>
                 </div>
@@ -234,11 +248,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             In the first week, we visited the Moffitt Makerspace in person individually. We noted down our initial thoughts on the space and tried to identify key features. We noted that there are some problematic qualities of the space that we could address. 
                         </p>
@@ -257,11 +271,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="ideate-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             After defining the problem we wanted to tackle, an ideating session was held with all team members and mentors at the Makerspace. The process included idea regurgitation onto sticky notes by everyone, followed by arranging these ideas into different categories of potential solutions we want to pursue.
                         </p>
@@ -282,12 +296,12 @@
                             5. <strong>Research </strong>(conducting interviews with users, makerspace experts, and other makerspaces)
                         </p>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-lg-9">
                                 <img src="../assets/img/makerspace/define/ideationsesh.png">
                                 <figcaption style="font-size: small; font-style: italic;">Post-its and whiteboard from our ideating session</figcaption>
                             </div>   
-                            <div class="col-8">
-                                <p>Although we valued multi-facted approach, attempting to address all of these elements would prove to decrease the depth and quality of work overall. Thus, the team, along with the mentors voted for their top two categories, resulting in outreach, brand identity, and research receiving the most votes.</p>
+                            <div class="col-lg-9">
+                                <p style="padding-top: 5%;">Although we valued multi-facted approach, attempting to address all of these elements would prove to decrease the depth and quality of work overall. Thus, the team, along with the mentors voted for their top two categories, resulting in outreach, brand identity, and research receiving the most votes.</p>
                                 <p>Sadly, the COVID-19 pandemic hit midway through the semester, obstructing our ability to interact with students or even access campus facilities (i.e. the Makerspace). Thus,  conducting in-person interviews or using the vinyl cutter to print a map for the wall on Moffitt’s 1st floor were no longer feasible. Thus, the team shifted the project to still tackle these problems as best as we could. The map and brand designs would be created digitally, research procedures would be developed, and outreach leads would be collected, all handed to the project mentors as a guide for late use.</p>
                             </div>  
                         </div>                                             
@@ -298,11 +312,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="solution-header"><u style="border-bottom: 10px solid #E06B65;">prototype</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>Based on our previous ideating sessions, we began ideating on several versions of signage and marketing deliverables for outreach. See below our progression from first drafts to final products. We first began with a solidified color theory. It was important to be for us in our work to be consistent in themes. As well, we wanted worked with the purple walls of Moffitt Library Floor 1 should the large-scale map be implemented on the wall. We applied a combination of our team’s suggestions into our prototypes and deliverables. </p>
                     </div>
                 </div>
@@ -312,11 +326,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="solution-header"><u style="border-bottom: 10px solid #FFFF99;">test</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             Following initial prototyping and the establishment of a clear and cohesive theme and color palette for the 
                             graphics, low-fidelity iterations of the final deliverables were created using Illustrator. During the following 
@@ -331,11 +345,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="next-steps-header"><u style="border-bottom: 10px solid #99CC99;">next steps</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <p>
                             Due to the COVID-19 Pandemic, a large part of our teams ability to empathize with users of the space was derailed. We would have liked to conduct interviews with designers at other Makerspaces, attend workshops at the Moffitt Makerspace, and speak with the students using this space to best guide the design changes we arrived at. In an effort to adapt to the circumstances surrounding the pandemic we instead provided procedural guidance to our mentors on how to carry out this crucial step of understanding the user.
                         </p>
@@ -351,11 +365,11 @@
         <div class="overview-container">
             <div class="project-content-container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3">
                         <h3 style="text-align: center;"
                         id="next-steps-header"><u style="border-bottom: 10px solid #99CCFF;">thank you</u></h3>
                     </div>
-                    <div class="col-9" style="font-style: normal;">
+                    <div class="col-lg-9" style="font-style: normal;">
                         <img src="../assets/img/makerspace/thanks/Group 21.png" style="padding-bottom: 25px;">
                         <p>
                             Thank you to our wonderful mentors Nicole and Annalise, who have been so present and supportive from our very first ideating session to the final edits of our deliverables, including the Moffitt Makerspace Guide. You both have offered so much insight and guidance as to how we would approach such a broad issue on campus with tangible solutions. As well, thank you for extending this oppurtunity to us, as designers on campus, to reimagine a unique space within the UC Berkeley community. In such trying and confusing times, we could not have been more grateful to have worked on this project under your guidance. We truly hope that our shared efforts can assist your work in establishing and sustaining an creative crommunity for all. 
