--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -103,7 +103,7 @@
                         partner
                     </p>
                     <p style="text-align: center; font-style: normal;">
-                        groupsource
+                        Groupsource
                     </p>
                   </div>
                   <div class="col">
@@ -112,7 +112,7 @@
                         tools
                     </p>
                     <p style="text-align: center; font-style: normal;">
-                        figma, user testing
+                        Figma, user testing
                     </p>
                   </div>
                 </div>
@@ -130,34 +130,48 @@
                             <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                                 <div class="row">
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
                                         <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
+                                        </a>
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
                                         <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
+                                        </a>
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
                                         <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
+                                        </a>
                                     </div>
                                     <div class="col">
                                         <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/maya-chen-1099/">
                                         <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
                                         <p>Isabella Dyc-O'Neal</p>
+                                        </a>
                                         <p>Project Lead</p>  
                                         <p>Cognitive Science</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
                                         <p>Abhinav Subramaniam</p>
+                                        </a>
                                         <p>Business Strategy Developer</p>  
                                         <p>Mechanical Engineering</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
                                         <p>Laurel Nelson</p>
+                                        </a>
                                         <p>Business Strategy Developer</p>  
                                         <p>Bioengineering</p>
                                     </div>
@@ -167,7 +181,9 @@
                                         <p>MCB & Political Science</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/maya-chen-1099/">
                                         <p>Maya Chen</p>
+                                        </a>
                                         <p>User Interface Designer</p>  
                                         <p>Cognitive Science</p>
                                     </div>
