--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/alemany-farms.html">
-                        <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
+                        <img src="assets/img/projthumbnails/alemany farm 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
                         <div class="proj-title">alemany farm</div>
                     </a>
                     </div>
@@ -97,7 +97,7 @@
                   <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/communitycafe.html">
-                        <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/projthumbnails/community cafe 3x2.png" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                         <div class="proj-title">community cafe</div>
                     </a>
                     </div>
@@ -105,7 +105,7 @@
                   <div class="col-6 col-sm-4">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/netic.html">
-                        <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/projthumbnails/neomotion 3x2.png" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                         <div class="proj-title">netic health</div>
                     </a>
                     </div>
@@ -113,7 +113,7 @@
                     <div class="col-6 col-sm-4">
                         <div style="padding-bottom: 10%;">
                         <a href="projects/berkeley-student-food-collective.html">
-                            <img src="assets/img/berkeley-food-icon (1)-01.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
+                            <img src="assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
                             alt="Berkeley Student Food Collective">
                             <div class="proj-title">berkeley student food collective</div>
                         </a>
@@ -122,7 +122,7 @@
                     <div class="col-6 col-sm-4">
                         <div style="padding-bottom: 10%;">
                         <a href="projects/makerspace.html">
-                            <img src="assets/img/makerspace-icon (1)-01.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <img src="assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                             <div class="proj-title">moffit makerspace</div>
                         </a>
                         </div>
@@ -130,7 +130,7 @@
                     <div class="col-6 col-sm-4">
                         <div style="padding-bottom: 10%;">
                         <a href="projects/groupsource.html">
-                            <img src="assets/img/groupsource-icon-01.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <img src="assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
                             <div class="proj-title">groupsource</div>
                         </a>
                         </div>
