--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </p>
             <img src="assets/img/four-pillars2.svg" alt="Four Pillars">
         </div>
-            
+
     </section>
 
     <!-- Projects Section -->
@@ -123,7 +123,7 @@
                         <div style="padding-bottom: 10%;">
                         <a href="projects/makerspace.html">
                             <img src="assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
-                            <div class="proj-title">moffit makerspace</div>
+                            <div class="proj-title">moffitt makerspace</div>
                         </a>
                         </div>
                     </div>
