groupsource header img

--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -71,7 +71,7 @@
         <div class="overview-container">
             <!-- <h2>Groupsource</h2> -->
             <div class="logo-container">
-                <img src="../assets/img/groupsource/LOGO.png" alt="Groupsource" id="groupsource-logo"/>
+                <img src="../assets/img/groupsource/LOGO.png" alt="Groupsource" style="width: 80%;"/>
             </div>
             <p class="project" style="text-align: center; padding-bottom: 10px;
             padding-top: 10px;">
