--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#members-header">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact-text">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -283,7 +283,7 @@
     <section id="contact">
         <div class="container">
             <div class="contact-txt">
-            <h2 id="contact-text">Collaborate with us.</h2>
+            <h2 id="contact-text" class="jumptarget">Collaborate with us.</h2>
             </div>
             <div class="line"></div>
             <div class="social-icons">
