--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -70,9 +70,7 @@
     <!-- Overview Section -->
         <div class="overview-container">
             <!-- <h2>Groupsource</h2> -->
-            <div class="logo-container">
-                <img src="../assets/img/groupsource/LOGO.png" alt="Groupsource" id="groupsource-logo" style="width: 80%;"/>
-            </div>
+                <img class="md-img center-img" src="../assets/img/groupsource/LOGO.png" alt="Groupsource" id="groupsource-logo" style="width: 60%;"/>
             <p class="project" style="text-align: center; padding-bottom: 10px;
             padding-top: 10px;">
                 To tackle the problem of students being unprepared to enter the work force due to a lack of real-world knowledge, we tried to make gaining relevant experience more accessible to students. We created high-fidelity wireframes and a pilot program for a platform that connects students with focused, impactful projects. 
